src/parser.output
Grammar

    0 $accept: program $end

    1 program: main_class class_declarations

    2 main_class: CLASS IDENTIFIER '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' IDENTIFIER ')' '{' statement '}' '}'

    3 class_declarations: /* empty */
    4                   | class_declarations class_declaration

    5 class_declaration: CLASS IDENTIFIER '{' variable_declarations method_declarations '}'

    6 variable_declarations: /* empty */
    7                      | variable_declarations variable_declaration

    8 variable_declaration: type IDENTIFIER ';'

    9 method_declarations: /* empty */
   10                    | method_declarations method_declaration

   11 method_declaration: PUBLIC type IDENTIFIER '(' parameter_list ')' '{' variable_declarations statements RETURN expression ';' '}'

   12 parameter_list: /* empty */
   13               | type IDENTIFIER parameter_rests

   14 parameter_rests: /* empty */
   15                | parameter_rests parameter_rest

   16 parameter_rest: ',' type IDENTIFIER

   17 type: INT '[' ']'
   18     | BOOLEAN
   19     | INT
   20     | IDENTIFIER

   21 statements: /* empty */
   22           | statement statements

   23 statement: '{' statements '}'
   24          | IF '(' expression ')' statement ELSE statement
   25          | WHILE '(' expression ')' statement
   26          | PRINT '(' expression ')' ';'
   27          | IDENTIFIER '=' expression ';'
   28          | IDENTIFIER '[' expression ']' '=' expression ';'

   29 expression_list: /* empty */
   30                | expression expression_rests

   31 expression_rests: /* empty */
   32                 | expression_rests expression_rest

   33 expression_rest: ',' expression

   34 expression: expression '+' expression
   35           | expression '-' expression
   36           | expression '*' expression
   37           | expression '<' expression
   38           | expression AND expression
   39           | expression '[' expression ']'
   40           | expression '.' LENGTH
   41           | expression '.' IDENTIFIER '(' expression_list ')'
   42           | INTEGER_LITERAL
   43           | TRUE
   44           | FALSE
   45           | IDENTIFIER
   46           | THIS
   47           | NEW INT '[' expression ']'
   48           | NEW IDENTIFIER '(' ')'
   49           | '!' expression
   50           | '(' expression ')'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 49
'(' (40) 2 11 24 25 26 41 48 50
')' (41) 2 11 24 25 26 41 48 50
'*' (42) 36
'+' (43) 34
',' (44) 16 33
'-' (45) 35
'.' (46) 40 41
';' (59) 8 11 26 27 28
'<' (60) 37
'=' (61) 27 28
'[' (91) 2 17 28 39 47
']' (93) 2 17 28 39 47
'{' (123) 2 5 11 23
'}' (125) 2 5 11 23
error (256)
BOOLEAN (258) 18
CLASS (259) 2 5
ELSE (260) 24
FALSE (261) 44
IDENTIFIER (262) 2 5 8 11 13 16 20 27 28 41 45 48
IF (263) 24
INT (264) 17 19 47
INTEGER_LITERAL (265) 42
MAIN (266) 2
NEW (267) 47 48
PRINT (268) 26
PUBLIC (269) 2 11
RETURN (270) 11
STATIC (271) 2
STRING (272) 2
THIS (273) 46
TRUE (274) 43
VOID (275) 2
WHILE (276) 25
LENGTH (277) 40
AND (278) 38


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
program (40)
    on left: 1, on right: 0
main_class (41)
    on left: 2, on right: 1
class_declarations (42)
    on left: 3 4, on right: 1 4
class_declaration (43)
    on left: 5, on right: 4
variable_declarations (44)
    on left: 6 7, on right: 5 7 11
variable_declaration (45)
    on left: 8, on right: 7
method_declarations (46)
    on left: 9 10, on right: 5 10
method_declaration (47)
    on left: 11, on right: 10
parameter_list (48)
    on left: 12 13, on right: 11
parameter_rests (49)
    on left: 14 15, on right: 13 15
parameter_rest (50)
    on left: 16, on right: 15
type (51)
    on left: 17 18 19 20, on right: 8 11 13 16
statements (52)
    on left: 21 22, on right: 11 22 23
statement (53)
    on left: 23 24 25 26 27 28, on right: 2 22 24 25
expression_list (54)
    on left: 29 30, on right: 41
expression_rests (55)
    on left: 31 32, on right: 30 32
expression_rest (56)
    on left: 33, on right: 32
expression (57)
    on left: 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50,
    on right: 11 24 25 26 27 28 30 33 34 35 36 37 38 39 40 41 47 49
    50


state 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    main_class  go to state 3


state 1

    2 main_class: CLASS . IDENTIFIER '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' IDENTIFIER ')' '{' statement '}' '}'

    IDENTIFIER  shift, and go to state 4


state 2

    0 $accept: program . $end

    $end  shift, and go to state 5


state 3

    1 program: main_class . class_declarations

    $default  reduce using rule 3 (class_declarations)

    class_declarations  go to state 6


state 4

    2 main_class: CLASS IDENTIFIER . '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' IDENTIFIER ')' '{' statement '}' '}'

    '{'  shift, and go to state 7


state 5

    0 $accept: program $end .

    $default  accept


state 6

    1 program: main_class class_declarations .
    4 class_declarations: class_declarations . class_declaration

    CLASS  shift, and go to state 8

    $default  reduce using rule 1 (program)

    class_declaration  go to state 9


state 7

    2 main_class: CLASS IDENTIFIER '{' . PUBLIC STATIC VOID MAIN '(' STRING '[' ']' IDENTIFIER ')' '{' statement '}' '}'

    PUBLIC  shift, and go to state 10


state 8

    5 class_declaration: CLASS . IDENTIFIER '{' variable_declarations method_declarations '}'

    IDENTIFIER  shift, and go to state 11


state 9

    4 class_declarations: class_declarations class_declaration .

    $default  reduce using rule 4 (class_declarations)


state 10

    2 main_class: CLASS IDENTIFIER '{' PUBLIC . STATIC VOID MAIN '(' STRING '[' ']' IDENTIFIER ')' '{' statement '}' '}'

    STATIC  shift, and go to state 12


state 11

    5 class_declaration: CLASS IDENTIFIER . '{' variable_declarations method_declarations '}'

    '{'  shift, and go to state 13


state 12

    2 main_class: CLASS IDENTIFIER '{' PUBLIC STATIC . VOID MAIN '(' STRING '[' ']' IDENTIFIER ')' '{' statement '}' '}'

    VOID  shift, and go to state 14


state 13

    5 class_declaration: CLASS IDENTIFIER '{' . variable_declarations method_declarations '}'

    $default  reduce using rule 6 (variable_declarations)

    variable_declarations  go to state 15


state 14

    2 main_class: CLASS IDENTIFIER '{' PUBLIC STATIC VOID . MAIN '(' STRING '[' ']' IDENTIFIER ')' '{' statement '}' '}'

    MAIN  shift, and go to state 16


state 15

    5 class_declaration: CLASS IDENTIFIER '{' variable_declarations . method_declarations '}'
    7 variable_declarations: variable_declarations . variable_declaration

    BOOLEAN     shift, and go to state 17
    IDENTIFIER  shift, and go to state 18
    INT         shift, and go to state 19

    $default  reduce using rule 9 (method_declarations)

    variable_declaration  go to state 20
    method_declarations   go to state 21
    type                  go to state 22


state 16

    2 main_class: CLASS IDENTIFIER '{' PUBLIC STATIC VOID MAIN . '(' STRING '[' ']' IDENTIFIER ')' '{' statement '}' '}'

    '('  shift, and go to state 23


state 17

   18 type: BOOLEAN .

    $default  reduce using rule 18 (type)


state 18

   20 type: IDENTIFIER .

    $default  reduce using rule 20 (type)


state 19

   17 type: INT . '[' ']'
   19     | INT .

    '['  shift, and go to state 24

    $default  reduce using rule 19 (type)


state 20

    7 variable_declarations: variable_declarations variable_declaration .

    $default  reduce using rule 7 (variable_declarations)


state 21

    5 class_declaration: CLASS IDENTIFIER '{' variable_declarations method_declarations . '}'
   10 method_declarations: method_declarations . method_declaration

    PUBLIC  shift, and go to state 25
    '}'     shift, and go to state 26

    method_declaration  go to state 27


state 22

    8 variable_declaration: type . IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 28


state 23

    2 main_class: CLASS IDENTIFIER '{' PUBLIC STATIC VOID MAIN '(' . STRING '[' ']' IDENTIFIER ')' '{' statement '}' '}'

    STRING  shift, and go to state 29


state 24

   17 type: INT '[' . ']'

    ']'  shift, and go to state 30


state 25

   11 method_declaration: PUBLIC . type IDENTIFIER '(' parameter_list ')' '{' variable_declarations statements RETURN expression ';' '}'

    BOOLEAN     shift, and go to state 17
    IDENTIFIER  shift, and go to state 18
    INT         shift, and go to state 19

    type  go to state 31


state 26

    5 class_declaration: CLASS IDENTIFIER '{' variable_declarations method_declarations '}' .

    $default  reduce using rule 5 (class_declaration)


state 27

   10 method_declarations: method_declarations method_declaration .

    $default  reduce using rule 10 (method_declarations)


state 28

    8 variable_declaration: type IDENTIFIER . ';'

    ';'  shift, and go to state 32


state 29

    2 main_class: CLASS IDENTIFIER '{' PUBLIC STATIC VOID MAIN '(' STRING . '[' ']' IDENTIFIER ')' '{' statement '}' '}'

    '['  shift, and go to state 33


state 30

   17 type: INT '[' ']' .

    $default  reduce using rule 17 (type)


state 31

   11 method_declaration: PUBLIC type . IDENTIFIER '(' parameter_list ')' '{' variable_declarations statements RETURN expression ';' '}'

    IDENTIFIER  shift, and go to state 34


state 32

    8 variable_declaration: type IDENTIFIER ';' .

    $default  reduce using rule 8 (variable_declaration)


state 33

    2 main_class: CLASS IDENTIFIER '{' PUBLIC STATIC VOID MAIN '(' STRING '[' . ']' IDENTIFIER ')' '{' statement '}' '}'

    ']'  shift, and go to state 35


state 34

   11 method_declaration: PUBLIC type IDENTIFIER . '(' parameter_list ')' '{' variable_declarations statements RETURN expression ';' '}'

    '('  shift, and go to state 36


state 35

    2 main_class: CLASS IDENTIFIER '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' . IDENTIFIER ')' '{' statement '}' '}'

    IDENTIFIER  shift, and go to state 37


state 36

   11 method_declaration: PUBLIC type IDENTIFIER '(' . parameter_list ')' '{' variable_declarations statements RETURN expression ';' '}'

    BOOLEAN     shift, and go to state 17
    IDENTIFIER  shift, and go to state 18
    INT         shift, and go to state 19

    $default  reduce using rule 12 (parameter_list)

    parameter_list  go to state 38
    type            go to state 39


state 37

    2 main_class: CLASS IDENTIFIER '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' IDENTIFIER . ')' '{' statement '}' '}'

    ')'  shift, and go to state 40


state 38

   11 method_declaration: PUBLIC type IDENTIFIER '(' parameter_list . ')' '{' variable_declarations statements RETURN expression ';' '}'

    ')'  shift, and go to state 41


state 39

   13 parameter_list: type . IDENTIFIER parameter_rests

    IDENTIFIER  shift, and go to state 42


state 40

    2 main_class: CLASS IDENTIFIER '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' IDENTIFIER ')' . '{' statement '}' '}'

    '{'  shift, and go to state 43


state 41

   11 method_declaration: PUBLIC type IDENTIFIER '(' parameter_list ')' . '{' variable_declarations statements RETURN expression ';' '}'

    '{'  shift, and go to state 44


state 42

   13 parameter_list: type IDENTIFIER . parameter_rests

    $default  reduce using rule 14 (parameter_rests)

    parameter_rests  go to state 45


state 43

    2 main_class: CLASS IDENTIFIER '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' IDENTIFIER ')' '{' . statement '}' '}'

    IDENTIFIER  shift, and go to state 46
    IF          shift, and go to state 47
    PRINT       shift, and go to state 48
    WHILE       shift, and go to state 49
    '{'         shift, and go to state 50

    statement  go to state 51


state 44

   11 method_declaration: PUBLIC type IDENTIFIER '(' parameter_list ')' '{' . variable_declarations statements RETURN expression ';' '}'

    $default  reduce using rule 6 (variable_declarations)

    variable_declarations  go to state 52


state 45

   13 parameter_list: type IDENTIFIER parameter_rests .
   15 parameter_rests: parameter_rests . parameter_rest

    ','  shift, and go to state 53

    $default  reduce using rule 13 (parameter_list)

    parameter_rest  go to state 54


state 46

   27 statement: IDENTIFIER . '=' expression ';'
   28          | IDENTIFIER . '[' expression ']' '=' expression ';'

    '='  shift, and go to state 55
    '['  shift, and go to state 56


state 47

   24 statement: IF . '(' expression ')' statement ELSE statement

    '('  shift, and go to state 57


state 48

   26 statement: PRINT . '(' expression ')' ';'

    '('  shift, and go to state 58


state 49

   25 statement: WHILE . '(' expression ')' statement

    '('  shift, and go to state 59


state 50

   23 statement: '{' . statements '}'

    IDENTIFIER  shift, and go to state 46
    IF          shift, and go to state 47
    PRINT       shift, and go to state 48
    WHILE       shift, and go to state 49
    '{'         shift, and go to state 50

    $default  reduce using rule 21 (statements)

    statements  go to state 60
    statement   go to state 61


state 51

    2 main_class: CLASS IDENTIFIER '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' IDENTIFIER ')' '{' statement . '}' '}'

    '}'  shift, and go to state 62


state 52

    7 variable_declarations: variable_declarations . variable_declaration
   11 method_declaration: PUBLIC type IDENTIFIER '(' parameter_list ')' '{' variable_declarations . statements RETURN expression ';' '}'

    BOOLEAN     shift, and go to state 17
    IDENTIFIER  shift, and go to state 63
    IF          shift, and go to state 47
    INT         shift, and go to state 19
    PRINT       shift, and go to state 48
    WHILE       shift, and go to state 49
    '{'         shift, and go to state 50

    $default  reduce using rule 21 (statements)

    variable_declaration  go to state 20
    type                  go to state 22
    statements            go to state 64
    statement             go to state 61


state 53

   16 parameter_rest: ',' . type IDENTIFIER

    BOOLEAN     shift, and go to state 17
    IDENTIFIER  shift, and go to state 18
    INT         shift, and go to state 19

    type  go to state 65


state 54

   15 parameter_rests: parameter_rests parameter_rest .

    $default  reduce using rule 15 (parameter_rests)


state 55

   27 statement: IDENTIFIER '=' . expression ';'

    FALSE            shift, and go to state 66
    IDENTIFIER       shift, and go to state 67
    INTEGER_LITERAL  shift, and go to state 68
    NEW              shift, and go to state 69
    THIS             shift, and go to state 70
    TRUE             shift, and go to state 71
    '!'              shift, and go to state 72
    '('              shift, and go to state 73

    expression  go to state 74


state 56

   28 statement: IDENTIFIER '[' . expression ']' '=' expression ';'

    FALSE            shift, and go to state 66
    IDENTIFIER       shift, and go to state 67
    INTEGER_LITERAL  shift, and go to state 68
    NEW              shift, and go to state 69
    THIS             shift, and go to state 70
    TRUE             shift, and go to state 71
    '!'              shift, and go to state 72
    '('              shift, and go to state 73

    expression  go to state 75


state 57

   24 statement: IF '(' . expression ')' statement ELSE statement

    FALSE            shift, and go to state 66
    IDENTIFIER       shift, and go to state 67
    INTEGER_LITERAL  shift, and go to state 68
    NEW              shift, and go to state 69
    THIS             shift, and go to state 70
    TRUE             shift, and go to state 71
    '!'              shift, and go to state 72
    '('              shift, and go to state 73

    expression  go to state 76


state 58

   26 statement: PRINT '(' . expression ')' ';'

    FALSE            shift, and go to state 66
    IDENTIFIER       shift, and go to state 67
    INTEGER_LITERAL  shift, and go to state 68
    NEW              shift, and go to state 69
    THIS             shift, and go to state 70
    TRUE             shift, and go to state 71
    '!'              shift, and go to state 72
    '('              shift, and go to state 73

    expression  go to state 77


state 59

   25 statement: WHILE '(' . expression ')' statement

    FALSE            shift, and go to state 66
    IDENTIFIER       shift, and go to state 67
    INTEGER_LITERAL  shift, and go to state 68
    NEW              shift, and go to state 69
    THIS             shift, and go to state 70
    TRUE             shift, and go to state 71
    '!'              shift, and go to state 72
    '('              shift, and go to state 73

    expression  go to state 78


state 60

   23 statement: '{' statements . '}'

    '}'  shift, and go to state 79


state 61

   22 statements: statement . statements

    IDENTIFIER  shift, and go to state 46
    IF          shift, and go to state 47
    PRINT       shift, and go to state 48
    WHILE       shift, and go to state 49
    '{'         shift, and go to state 50

    $default  reduce using rule 21 (statements)

    statements  go to state 80
    statement   go to state 61


state 62

    2 main_class: CLASS IDENTIFIER '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' IDENTIFIER ')' '{' statement '}' . '}'

    '}'  shift, and go to state 81


state 63

   20 type: IDENTIFIER .
   27 statement: IDENTIFIER . '=' expression ';'
   28          | IDENTIFIER . '[' expression ']' '=' expression ';'

    '='  shift, and go to state 55
    '['  shift, and go to state 56

    $default  reduce using rule 20 (type)


state 64

   11 method_declaration: PUBLIC type IDENTIFIER '(' parameter_list ')' '{' variable_declarations statements . RETURN expression ';' '}'

    RETURN  shift, and go to state 82


state 65

   16 parameter_rest: ',' type . IDENTIFIER

    IDENTIFIER  shift, and go to state 83


state 66

   44 expression: FALSE .

    $default  reduce using rule 44 (expression)


state 67

   45 expression: IDENTIFIER .

    $default  reduce using rule 45 (expression)


state 68

   42 expression: INTEGER_LITERAL .

    $default  reduce using rule 42 (expression)


state 69

   47 expression: NEW . INT '[' expression ']'
   48           | NEW . IDENTIFIER '(' ')'

    IDENTIFIER  shift, and go to state 84
    INT         shift, and go to state 85


state 70

   46 expression: THIS .

    $default  reduce using rule 46 (expression)


state 71

   43 expression: TRUE .

    $default  reduce using rule 43 (expression)


state 72

   49 expression: '!' . expression

    FALSE            shift, and go to state 66
    IDENTIFIER       shift, and go to state 67
    INTEGER_LITERAL  shift, and go to state 68
    NEW              shift, and go to state 69
    THIS             shift, and go to state 70
    TRUE             shift, and go to state 71
    '!'              shift, and go to state 72
    '('              shift, and go to state 73

    expression  go to state 86


state 73

   50 expression: '(' . expression ')'

    FALSE            shift, and go to state 66
    IDENTIFIER       shift, and go to state 67
    INTEGER_LITERAL  shift, and go to state 68
    NEW              shift, and go to state 69
    THIS             shift, and go to state 70
    TRUE             shift, and go to state 71
    '!'              shift, and go to state 72
    '('              shift, and go to state 73

    expression  go to state 87


state 74

   27 statement: IDENTIFIER '=' expression . ';'
   34 expression: expression . '+' expression
   35           | expression . '-' expression
   36           | expression . '*' expression
   37           | expression . '<' expression
   38           | expression . AND expression
   39           | expression . '[' expression ']'
   40           | expression . '.' LENGTH
   41           | expression . '.' IDENTIFIER '(' expression_list ')'

    AND  shift, and go to state 88
    '<'  shift, and go to state 89
    '+'  shift, and go to state 90
    '-'  shift, and go to state 91
    '*'  shift, and go to state 92
    '.'  shift, and go to state 93
    '['  shift, and go to state 94
    ';'  shift, and go to state 95


state 75

   28 statement: IDENTIFIER '[' expression . ']' '=' expression ';'
   34 expression: expression . '+' expression
   35           | expression . '-' expression
   36           | expression . '*' expression
   37           | expression . '<' expression
   38           | expression . AND expression
   39           | expression . '[' expression ']'
   40           | expression . '.' LENGTH
   41           | expression . '.' IDENTIFIER '(' expression_list ')'

    AND  shift, and go to state 88
    '<'  shift, and go to state 89
    '+'  shift, and go to state 90
    '-'  shift, and go to state 91
    '*'  shift, and go to state 92
    '.'  shift, and go to state 93
    '['  shift, and go to state 94
    ']'  shift, and go to state 96


state 76

   24 statement: IF '(' expression . ')' statement ELSE statement
   34 expression: expression . '+' expression
   35           | expression . '-' expression
   36           | expression . '*' expression
   37           | expression . '<' expression
   38           | expression . AND expression
   39           | expression . '[' expression ']'
   40           | expression . '.' LENGTH
   41           | expression . '.' IDENTIFIER '(' expression_list ')'

    AND  shift, and go to state 88
    '<'  shift, and go to state 89
    '+'  shift, and go to state 90
    '-'  shift, and go to state 91
    '*'  shift, and go to state 92
    '.'  shift, and go to state 93
    '['  shift, and go to state 94
    ')'  shift, and go to state 97


state 77

   26 statement: PRINT '(' expression . ')' ';'
   34 expression: expression . '+' expression
   35           | expression . '-' expression
   36           | expression . '*' expression
   37           | expression . '<' expression
   38           | expression . AND expression
   39           | expression . '[' expression ']'
   40           | expression . '.' LENGTH
   41           | expression . '.' IDENTIFIER '(' expression_list ')'

    AND  shift, and go to state 88
    '<'  shift, and go to state 89
    '+'  shift, and go to state 90
    '-'  shift, and go to state 91
    '*'  shift, and go to state 92
    '.'  shift, and go to state 93
    '['  shift, and go to state 94
    ')'  shift, and go to state 98


state 78

   25 statement: WHILE '(' expression . ')' statement
   34 expression: expression . '+' expression
   35           | expression . '-' expression
   36           | expression . '*' expression
   37           | expression . '<' expression
   38           | expression . AND expression
   39           | expression . '[' expression ']'
   40           | expression . '.' LENGTH
   41           | expression . '.' IDENTIFIER '(' expression_list ')'

    AND  shift, and go to state 88
    '<'  shift, and go to state 89
    '+'  shift, and go to state 90
    '-'  shift, and go to state 91
    '*'  shift, and go to state 92
    '.'  shift, and go to state 93
    '['  shift, and go to state 94
    ')'  shift, and go to state 99


state 79

   23 statement: '{' statements '}' .

    $default  reduce using rule 23 (statement)


state 80

   22 statements: statement statements .

    $default  reduce using rule 22 (statements)


state 81

    2 main_class: CLASS IDENTIFIER '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' IDENTIFIER ')' '{' statement '}' '}' .

    $default  reduce using rule 2 (main_class)


state 82

   11 method_declaration: PUBLIC type IDENTIFIER '(' parameter_list ')' '{' variable_declarations statements RETURN . expression ';' '}'

    FALSE            shift, and go to state 66
    IDENTIFIER       shift, and go to state 67
    INTEGER_LITERAL  shift, and go to state 68
    NEW              shift, and go to state 69
    THIS             shift, and go to state 70
    TRUE             shift, and go to state 71
    '!'              shift, and go to state 72
    '('              shift, and go to state 73

    expression  go to state 100


state 83

   16 parameter_rest: ',' type IDENTIFIER .

    $default  reduce using rule 16 (parameter_rest)


state 84

   48 expression: NEW IDENTIFIER . '(' ')'

    '('  shift, and go to state 101


state 85

   47 expression: NEW INT . '[' expression ']'

    '['  shift, and go to state 102


state 86

   34 expression: expression . '+' expression
   35           | expression . '-' expression
   36           | expression . '*' expression
   37           | expression . '<' expression
   38           | expression . AND expression
   39           | expression . '[' expression ']'
   40           | expression . '.' LENGTH
   41           | expression . '.' IDENTIFIER '(' expression_list ')'
   49           | '!' expression .

    '.'  shift, and go to state 93
    '['  shift, and go to state 94

    $default  reduce using rule 49 (expression)


state 87

   34 expression: expression . '+' expression
   35           | expression . '-' expression
   36           | expression . '*' expression
   37           | expression . '<' expression
   38           | expression . AND expression
   39           | expression . '[' expression ']'
   40           | expression . '.' LENGTH
   41           | expression . '.' IDENTIFIER '(' expression_list ')'
   50           | '(' expression . ')'

    AND  shift, and go to state 88
    '<'  shift, and go to state 89
    '+'  shift, and go to state 90
    '-'  shift, and go to state 91
    '*'  shift, and go to state 92
    '.'  shift, and go to state 93
    '['  shift, and go to state 94
    ')'  shift, and go to state 103


state 88

   38 expression: expression AND . expression

    FALSE            shift, and go to state 66
    IDENTIFIER       shift, and go to state 67
    INTEGER_LITERAL  shift, and go to state 68
    NEW              shift, and go to state 69
    THIS             shift, and go to state 70
    TRUE             shift, and go to state 71
    '!'              shift, and go to state 72
    '('              shift, and go to state 73

    expression  go to state 104


state 89

   37 expression: expression '<' . expression

    FALSE            shift, and go to state 66
    IDENTIFIER       shift, and go to state 67
    INTEGER_LITERAL  shift, and go to state 68
    NEW              shift, and go to state 69
    THIS             shift, and go to state 70
    TRUE             shift, and go to state 71
    '!'              shift, and go to state 72
    '('              shift, and go to state 73

    expression  go to state 105


state 90

   34 expression: expression '+' . expression

    FALSE            shift, and go to state 66
    IDENTIFIER       shift, and go to state 67
    INTEGER_LITERAL  shift, and go to state 68
    NEW              shift, and go to state 69
    THIS             shift, and go to state 70
    TRUE             shift, and go to state 71
    '!'              shift, and go to state 72
    '('              shift, and go to state 73

    expression  go to state 106


state 91

   35 expression: expression '-' . expression

    FALSE            shift, and go to state 66
    IDENTIFIER       shift, and go to state 67
    INTEGER_LITERAL  shift, and go to state 68
    NEW              shift, and go to state 69
    THIS             shift, and go to state 70
    TRUE             shift, and go to state 71
    '!'              shift, and go to state 72
    '('              shift, and go to state 73

    expression  go to state 107


state 92

   36 expression: expression '*' . expression

    FALSE            shift, and go to state 66
    IDENTIFIER       shift, and go to state 67
    INTEGER_LITERAL  shift, and go to state 68
    NEW              shift, and go to state 69
    THIS             shift, and go to state 70
    TRUE             shift, and go to state 71
    '!'              shift, and go to state 72
    '('              shift, and go to state 73

    expression  go to state 108


state 93

   40 expression: expression '.' . LENGTH
   41           | expression '.' . IDENTIFIER '(' expression_list ')'

    IDENTIFIER  shift, and go to state 109
    LENGTH      shift, and go to state 110


state 94

   39 expression: expression '[' . expression ']'

    FALSE            shift, and go to state 66
    IDENTIFIER       shift, and go to state 67
    INTEGER_LITERAL  shift, and go to state 68
    NEW              shift, and go to state 69
    THIS             shift, and go to state 70
    TRUE             shift, and go to state 71
    '!'              shift, and go to state 72
    '('              shift, and go to state 73

    expression  go to state 111


state 95

   27 statement: IDENTIFIER '=' expression ';' .

    $default  reduce using rule 27 (statement)


state 96

   28 statement: IDENTIFIER '[' expression ']' . '=' expression ';'

    '='  shift, and go to state 112


state 97

   24 statement: IF '(' expression ')' . statement ELSE statement

    IDENTIFIER  shift, and go to state 46
    IF          shift, and go to state 47
    PRINT       shift, and go to state 48
    WHILE       shift, and go to state 49
    '{'         shift, and go to state 50

    statement  go to state 113


state 98

   26 statement: PRINT '(' expression ')' . ';'

    ';'  shift, and go to state 114


state 99

   25 statement: WHILE '(' expression ')' . statement

    IDENTIFIER  shift, and go to state 46
    IF          shift, and go to state 47
    PRINT       shift, and go to state 48
    WHILE       shift, and go to state 49
    '{'         shift, and go to state 50

    statement  go to state 115


state 100

   11 method_declaration: PUBLIC type IDENTIFIER '(' parameter_list ')' '{' variable_declarations statements RETURN expression . ';' '}'
   34 expression: expression . '+' expression
   35           | expression . '-' expression
   36           | expression . '*' expression
   37           | expression . '<' expression
   38           | expression . AND expression
   39           | expression . '[' expression ']'
   40           | expression . '.' LENGTH
   41           | expression . '.' IDENTIFIER '(' expression_list ')'

    AND  shift, and go to state 88
    '<'  shift, and go to state 89
    '+'  shift, and go to state 90
    '-'  shift, and go to state 91
    '*'  shift, and go to state 92
    '.'  shift, and go to state 93
    '['  shift, and go to state 94
    ';'  shift, and go to state 116


state 101

   48 expression: NEW IDENTIFIER '(' . ')'

    ')'  shift, and go to state 117


state 102

   47 expression: NEW INT '[' . expression ']'

    FALSE            shift, and go to state 66
    IDENTIFIER       shift, and go to state 67
    INTEGER_LITERAL  shift, and go to state 68
    NEW              shift, and go to state 69
    THIS             shift, and go to state 70
    TRUE             shift, and go to state 71
    '!'              shift, and go to state 72
    '('              shift, and go to state 73

    expression  go to state 118


state 103

   50 expression: '(' expression ')' .

    $default  reduce using rule 50 (expression)


state 104

   34 expression: expression . '+' expression
   35           | expression . '-' expression
   36           | expression . '*' expression
   37           | expression . '<' expression
   38           | expression . AND expression
   38           | expression AND expression .
   39           | expression . '[' expression ']'
   40           | expression . '.' LENGTH
   41           | expression . '.' IDENTIFIER '(' expression_list ')'

    '<'  shift, and go to state 89
    '+'  shift, and go to state 90
    '-'  shift, and go to state 91
    '*'  shift, and go to state 92
    '.'  shift, and go to state 93
    '['  shift, and go to state 94

    $default  reduce using rule 38 (expression)


state 105

   34 expression: expression . '+' expression
   35           | expression . '-' expression
   36           | expression . '*' expression
   37           | expression . '<' expression
   37           | expression '<' expression .
   38           | expression . AND expression
   39           | expression . '[' expression ']'
   40           | expression . '.' LENGTH
   41           | expression . '.' IDENTIFIER '(' expression_list ')'

    '+'  shift, and go to state 90
    '-'  shift, and go to state 91
    '*'  shift, and go to state 92
    '.'  shift, and go to state 93
    '['  shift, and go to state 94

    $default  reduce using rule 37 (expression)


state 106

   34 expression: expression . '+' expression
   34           | expression '+' expression .
   35           | expression . '-' expression
   36           | expression . '*' expression
   37           | expression . '<' expression
   38           | expression . AND expression
   39           | expression . '[' expression ']'
   40           | expression . '.' LENGTH
   41           | expression . '.' IDENTIFIER '(' expression_list ')'

    '*'  shift, and go to state 92
    '.'  shift, and go to state 93
    '['  shift, and go to state 94

    $default  reduce using rule 34 (expression)


state 107

   34 expression: expression . '+' expression
   35           | expression . '-' expression
   35           | expression '-' expression .
   36           | expression . '*' expression
   37           | expression . '<' expression
   38           | expression . AND expression
   39           | expression . '[' expression ']'
   40           | expression . '.' LENGTH
   41           | expression . '.' IDENTIFIER '(' expression_list ')'

    '*'  shift, and go to state 92
    '.'  shift, and go to state 93
    '['  shift, and go to state 94

    $default  reduce using rule 35 (expression)


state 108

   34 expression: expression . '+' expression
   35           | expression . '-' expression
   36           | expression . '*' expression
   36           | expression '*' expression .
   37           | expression . '<' expression
   38           | expression . AND expression
   39           | expression . '[' expression ']'
   40           | expression . '.' LENGTH
   41           | expression . '.' IDENTIFIER '(' expression_list ')'

    '.'  shift, and go to state 93
    '['  shift, and go to state 94

    $default  reduce using rule 36 (expression)


state 109
